@@ -1,5 +1,12 @@
 2013-11-10  Julien Bect  <julien.bect@supelec.fr>
 
+	Change plot labels in several examples.
+
+	* examples/01_kriging_basics/stk_example_kb01.m: modified
+	* examples/01_kriging_basics/stk_example_kb02.m: modified
+	* examples/01_kriging_basics/stk_example_kb04.m: modified
+	* examples/01_kriging_basics/stk_example_kb05.m: modified
+
 	New functions to create labels with options.
 
 	* misc/plot/stk_xlabel.m: new function
